--- a/London-Ramparts.html
+++ b/London-Ramparts.html
@@ -75,8 +75,8 @@
         <h2 class="u-align-center-lg u-align-center-xl u-custom-font u-font-pt-sans u-text u-text-grey-90 u-text-3">
           <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-font-pt-sans u-hover-none u-none u-text-palette-1-base u-btn-1" data-href="https://www.instagram.com/londonramparts/" data-target="_blank" href="https://www.instagram.com/londonramparts/" target="_blank">here.</a>
         </h2>
-        <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-file-link u-font-pt-sans u-hover-none u-none u-text-palette-1-base u-btn-2" data-href="mailto:coltmcmedia@gmail.com" href="files/Comp_StyleGuideforPDF_02.pdf">Team Style Guide</a>
-        <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-file-link u-font-pt-sans u-hover-none u-none u-text-palette-1-base u-btn-3" data-href="mailto:coltmcmedia@gmail.com" href="files/Comp_RampartsShirts_01.pdf">Team Apparel</a>
+        <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-file-link u-font-pt-sans u-hover-none u-none u-text-palette-1-base u-btn-2" data-href="mailto:coltmcmedia@gmail.com" href="Comp_StyleGuideforPDF_02.pdf">Team Style Guide</a>
+        <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-file-link u-font-pt-sans u-hover-none u-none u-text-palette-1-base u-btn-3" data-href="mailto:coltmcmedia@gmail.com" href="Comp_RampartsShirts_01.pdf">Team Apparel</a>
         <div class="u-expanded-width u-gallery u-layout-grid u-lightbox u-no-transition u-show-text-none u-gallery-1">
           <div class="u-gallery-inner u-gallery-inner-1">
             <div class="u-effect-hover-zoom u-gallery-item u-shape-rectangle u-gallery-item-1" data-image-width="1080" data-image-height="1350">
