--- a/About-Me.html
+++ b/About-Me.html
@@ -90,8 +90,8 @@
         <p class="u-custom-font u-font-pt-sans u-text u-text-6">
           <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-4" data-href="https://www.instagram.com/coltmcmedia/" data-target="_blank">@coltmcmedia</a>
         </p><span class="u-file-icon u-icon u-icon-rectangle u-icon-3" data-href="https://www.instagram.com/coltmcmedia/" data-target="_blank"><img src="2111491.png" alt=""></span>
-        <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-file-link u-font-pt-sans u-hover-none u-none u-text-palette-1-base u-btn-5" data-href="mailto:coltmcmedia@gmail.com" href="files/McManisResume.pdf">Check out my Resume</a>
-        <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-file-link u-font-pt-sans u-hover-none u-none u-text-palette-1-base u-btn-6" data-href="mailto:coltmcmedia@gmail.com" href="files/McManisCV.pdf">Check out my CV</a>
+        <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-file-link u-font-pt-sans u-hover-none u-none u-text-palette-1-base u-btn-5" data-href="mailto:coltmcmedia@gmail.com" href="McManisResume.pdf">Check out my Resume</a>
+        <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-file-link u-font-pt-sans u-hover-none u-none u-text-palette-1-base u-btn-6" data-href="mailto:coltmcmedia@gmail.com" href="McManisCV.pdf">Check out my CV</a>
       </div>
     </section>
     
